--- a/Experiments/bench/intra-node/media_service/service_config.json
+++ b/Experiments/bench/intra-node/media_service/service_config.json
@@ -15,7 +15,7 @@
   },
   "System": {
     "timeoutAsMsForPoller": 8000,
-    "timeoutAsMsForDRC": 600000,
+    "timeoutAsMsForDRC": 3600000,
     "pollTimeInternalAsUs": 10,
     "memoryRegionSize": 1048576,
     "messageSizeOfFabric": 1024
