add Pheromone client for MediaService

--- a/Experiments/bench/pheromone_loadgen/service_config.json
+++ b/Experiments/bench/pheromone_loadgen/service_config.json
@@ -61,6 +61,7 @@
   "Functions": [
     {"funcName": "exp09StartChain", "funcId": 1, "minWorkers": 4, "maxWorkers": 4},
     {"funcName": "exp09StartFinra", "funcId": 2, "minWorkers": 4, "maxWorkers": 4},
-    {"funcName": "exp09StartMedia", "funcId": 3, "minWorkers": 4, "maxWorkers": 4}
+    {"funcName": "exp09StartMedia", "funcId": 3, "minWorkers": 4, "maxWorkers": 4},
+    {"funcName": "exp09End", "funcId": 4, "minWorkers": 4, "maxWorkers": 4}
   ]
 }
